# susbot-wenglab

./: README.md  app.py  config.py  debug_bot.py  main.py  pyproject.toml  test.py
cluster/: node.py  query_slurm.py
notebooks/: block.json  jobs.json  node.json  pyslurm_data.ipynb  slurm_visualization.ipynb  statistics.json
utils/: slack2unix.py  utils.py
